<FEAT> RacerController playGame 메소드 구현